# karalingo

./: .env.public  .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
.claude/: launch.json
sidecar/: demucs_runner.py  whisper_runner.py
src/: App.tsx  index.css  vite-env.d.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs
src/components/: LanguageSelector.tsx  LyricsDisplay.tsx  Player.tsx  ProcessingOverlay.tsx  RecognitionButton.tsx  Settings.tsx  SetupWizard.tsx  WaveformVisualizer.tsx
src/hooks/: useAudioPlayer.ts  useRecorder.ts
src/services/: lyricsService.ts
src/store/: types.ts  useAppStore.ts
src/utils/: envDefaults.ts  languages.ts  lrc.ts
